--- a/style.css
+++ b/style.css
@@ -3,6 +3,49 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 0 0 10px;
   padding: 0;
+}
+
+.parent {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.bookListStyle {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 10vh;
+}
+
+.bookListInput-1 {
+  width: 30%;
+}
+
+.bookListInput-2 {
+  width: 30%;
+}
+
+.add {
+  width: fit-content;
+}
+
+li {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 12vh;
+  border-bottom: 1px solid black ;
+  padding-bottom: 15px;
+}
+
+.removeButtonStyle {
+  width: fit-content;
 }
