--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 * {
   box-sizing: border-box;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 body {
   margin: 0 0 0 10px;
   padding: 0;
+}
+
+h1 {
+  font-size: 2.5rem;
 }
 
 .parent {
@@ -40,6 +46,7 @@ body {
 
 .add {
   width: fit-content;
+  padding: 5px 10px;
 }
 
 li {
@@ -48,11 +55,12 @@ li {
   flex-direction: column;
   justify-content: space-between;
   height: 12vh;
-  border-bottom: 1px solid black ;
+  border-bottom: 1px solid gray ;
   padding-bottom: 15px;
   padding-top: 10px;
 }
 
 .removeButtonStyle {
   width: fit-content;
+  padding: 5px 10px;
 }
