--- a/style.css
+++ b/style.css
@@ -15,24 +15,40 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: start;
+  align-items: center;
   padding-left: 2em;
 }
 
-h1 {
+h1,h3 {
   font-size: 2.6rem;
 }
 
 #bookList {
+  width: 100%;
   list-style: none;
-  padding-left: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
+  border: 4px solid black;
 }
 
 li {
-  margin: 0.6em 0;
-  border-bottom: 1px solid gray;
-  padding-bottom: 14px;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+
+h2 {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 5px;
+}
+
+hr {
+  width: 200px;
+  border: 1px solid;
 }
 
 #titleInput,
@@ -41,7 +57,7 @@ li {
   margin-bottom: 1em;
   padding: 0.4em 0;
   border-radius: 4px;
-  border: 1px solid gray;
+  border: 4px solid #000;
 }
 
 .add {
@@ -50,6 +66,7 @@ li {
   text-align: center;
   border-radius: 4px;
   border: 1px solid gray;
+  box-shadow: 4px 4px rgba(0, 0, 0, 1);
 }
 
 .removeButtonStyle {
@@ -57,5 +74,12 @@ li {
   padding: 0.5em 1em;
   border-radius: 5px;
   border: 1px solid gray;
-  margin-top: 0.4em;
+  margin-right: 5px;
+  box-shadow: 4px 4px rgba(0, 0, 0, 1);
+}
+
+/* intercalate and change the style of the half of the books tittles  */
+
+.makeMeGrey {
+  background-color:lightgrey ;
 }
