--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h3 {
 #bookList {
   width: 90%;
   list-style: none;
-  padding: 0;
+  padding: 0 10px;
   display: flex;
   flex-direction: column;
   border: 4px solid black;
@@ -67,6 +67,7 @@ hr {
   border-radius: 4px;
   border: 1px solid gray;
   box-shadow: 4px 4px rgba(0, 0, 0, 1);
+  margin-left: 140px;
 }
 
 .removeButtonStyle {
