--- a/style.css
+++ b/style.css
@@ -15,40 +15,24 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  align-items: center;
+  padding-left: 2em;
 }
 
-h1,
-h3 {
+h1 {
   font-size: 2.6rem;
 }
 
 #bookList {
-  width: 90%;
   list-style: none;
-  padding: 0 10px;
+  padding-left: 0;
   display: flex;
   flex-direction: column;
-  border: 4px solid black;
 }
 
 li {
-  margin: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-}
-
-h2 {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 5px;
-}
-
-hr {
-  width: 200px;
-  border: 1px solid;
+  margin: 0.6em 0;
+  border-bottom: 1px solid gray;
+  padding-bottom: 14px;
 }
 
 #titleInput,
@@ -57,7 +41,7 @@ hr {
   margin-bottom: 1em;
   padding: 0.4em 0;
   border-radius: 4px;
-  border: 4px solid #000;
+  border: 1px solid gray;
 }
 
 .add {
@@ -66,8 +50,6 @@ hr {
   text-align: center;
   border-radius: 4px;
   border: 1px solid gray;
-  box-shadow: 4px 4px rgba(0, 0, 0, 1);
-  margin-left: 140px;
 }
 
 .removeButtonStyle {
@@ -75,12 +57,5 @@ hr {
   padding: 0.5em 1em;
   border-radius: 5px;
   border: 1px solid gray;
-  margin-right: 5px;
-  box-shadow: 4px 4px rgba(0, 0, 0, 1);
-}
-
-/* intercalate and change the style of the half of the books tittles  */
-
-.makeMeGrey {
-  background-color: lightgrey;
+  margin-top: 0.4em;
 }
