--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h3 {
 }
 
 li {
-  margin: 0;
+  margin: 4px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -75,7 +75,7 @@ hr {
   padding: 0.5em 1em;
   border-radius: 5px;
   border: 1px solid gray;
-  margin-right: 5px;
+  margin: 0 6px 4px;
   box-shadow: 4px 4px rgba(0, 0, 0, 1);
 }
 
