--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ hr {
   padding: 0.5em 1em;
   border-radius: 5px;
   border: 1px solid gray;
-  margin-right: 5px;
+  margin: 0.5em 0;
   box-shadow: 4px 4px rgba(0, 0, 0, 1);
 }
 
