--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 * {
   box-sizing: border-box;
   font-weight: 600;
-  font-size: 1rem;
+  text-decoration: none;
+  list-style: none;
+  color: #000;
 }
 
 body {
@@ -9,9 +11,52 @@ body {
   padding: 0;
 }
 
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1.2em;
+  border: 3px solid black;
+}
+
+.nav h4 {
+  animation-name: flip;
+  animation-duration: 1.2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+  font-size: 1.4em;
+  color: brown;
+}
+
+@keyframes flip {
+  0% {
+    opacity: 0.2;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+#nav {
+  display: flex;
+  gap: 0.8em;
+  font-size: 1.2em;
+}
+
+a {
+  transition: all 0.6s ease-out;
+}
+
+a:hover {
+  font-size: 1.25em;
+  color: orangered;
+}
+
 .parent {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -24,7 +69,7 @@ h3 {
 }
 
 #bookList {
-  width: 90%;
+  width: 100%;
   list-style: none;
   padding: 0 10px;
   display: flex;
@@ -32,7 +77,15 @@ h3 {
   border: 4px solid black;
 }
 
-li {
+.bookslist {
+  display: none;
+  flex-direction: column;
+  min-width: 70%;
+  align-items: center;
+  margin-top: 2em;
+}
+
+#bookList li {
   margin: 4px 0;
   display: flex;
   justify-content: space-between;
@@ -67,7 +120,8 @@ hr {
   border-radius: 4px;
   border: 1px solid gray;
   box-shadow: 4px 4px rgba(0, 0, 0, 1);
-  margin-left: 140px;
+  margin-left: 230px;
+  cursor: pointer;
 }
 
 .removeButtonStyle {
@@ -77,10 +131,36 @@ hr {
   border: 1px solid gray;
   margin: 0 6px 4px;
   box-shadow: 4px 4px rgba(0, 0, 0, 1);
+  cursor: pointer;
+}
+
+.main-page {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2em;
 }
 
 /* intercalate and change the style of the half of the books tittles  */
 
 .makeMeGrey {
   background-color: lightgrey;
+}
+
+#contact {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+}
+
+.copy-right {
+  border: 3px solid black;
+  font-size: 1.4rem;
+  padding: 0.4em 0;
+  position: fixed;
+  top: 90%;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
