--- a/style.css
+++ b/style.css
@@ -51,11 +51,12 @@ body {
 
 a {
   transition: all 0.6s ease-out;
+  color: brown;
 }
 
 a:hover {
   font-size: 1.25em;
-  color: orangered;
+  color: rgb(22, 186, 184);
 }
 
 #bookList li {
@@ -83,6 +84,11 @@ a:hover {
 h1,
 h3 {
   font-size: 2.6rem;
+}
+
+h6 {
+  font-size: 1.3rem;
+  color: chocolate;
 }
 
 #bookList {
