--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 .nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -27,6 +28,17 @@ body {
   animation-play-state: running;
   font-size: 1.4em;
   color: brown;
+}
+
+header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+time {
+  padding: 5px 20px;
 }
 
 @keyframes flip {
